fix: add corect name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="mainContainer">
         <header class="header">
-            <h1>Kingov-alexey</h1>
+            <h1>Alexey Korolyov</h1>
         </header>
         <main class="container">
             <div class="avatar">
