--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <main class="container">
             <div class="avatar">
                 <img src="https://avatars.githubusercontent.com/u/67068410?s=460&u=c8e2cab0c065fa2cd62a34af6cc060708a4603d7&v=4"
-                    alt="avatar" />
+                    alt="avatar">
                 <ul>
                     <li class="">Alexey Korolyov</li>
                     <li>GitHub: <a href="https://github.com/kingov-alexey">@kingov-alexey</a> Email:
                         kingov_alexey@mail.ru</li>
                     <li>My goal is to learn how to write applications for mobile phones as well as modern web
-                        applications.</br> The selected range of tools will allow me to realize my goal.</li>
+                        applications.<br /> The selected range of tools will allow me to realize my goal.</li>
                     <li>Skills:
                         <ul>
                             <li>HTML</li>
