fix: change tag br

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li>GitHub: <a href="https://github.com/kingov-alexey">@kingov-alexey</a> Email:
                         kingov_alexey@mail.ru</li>
                     <li>My goal is to learn how to write applications for mobile phones as well as modern web
-                        applications.<br /> The selected range of tools will allow me to realize my goal.</li>
+                        applications.<br> The selected range of tools will allow me to realize my goal.</li>
                     <li>Skills:
                         <ul>
                             <li>HTML</li>
