--- a/index.html
+++ b/index.html
@@ -6,50 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Alexey Korolyov</title>
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/spinner.css">
+
     <link rel="icon" href="./assets/img/favicon.ico">
     <link rel="preload" href="./assets/fonts/ZenDots-Regular.ttf" as="font">
+    <title>Alexey Korolyov</title>
 </head>
 
 <body>
-    <div class="spinner"></div>
+
     <div class="wrap">
 
         <header class="header">
-            <div class="menu-icon">
-                <a href="#menu">
-                    <img src="./assets/img/menu.png" alt="menu">
-                </a>
-            </div>
-
             <div class="header-content">
                 <h1>Korolyov Alexey</h1>
                 <span>developer</span>
             </div>
-
         </header>
 
-        <!-- <nav class="nav">
-            <div class="container">
-                <ul class="nav-list">
-                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
-                    <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
-                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
-                </ul>
-            </div>
-        </nav> -->
+
+        <nav>
+            <input type="checkbox" id="hmt" class="hidden-menu-ticker">
+            <label class="btn-menu" for="hmt">
+                <span class="first"></span>
+                <span class="second"></span>
+                <span class="third"></span>
+            </label>
+            <ul class="hidden-menu">
+                <li class="menu-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li class="menu-item"><a href="#summary" class="nav-link">Summary</a></li>
+                <li class="menu-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="menu-item"><a href="#code" class="nav-link">Code</a></li>
+                <li class="menu-item"><a href="#courses" class="nav-link">Courses</a></li>
+                <li class="menu-item"><a href="#Projects" class="nav-link">Projects</a></li>
+                <li class="menu-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="menu-item"><a href="#english" class="nav-link">English</a></li>
+            </ul>
+        </nav>
+
+
+
 
         <main class="main">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="card-profile">
                     <div class="avatar">
                         <img src="./assets/img/avatar.jpg" alt="avatar">
                     </div>
+                </div>
+            </div> -->
+
+            <div class="container">
+                <div class="card-contacts">
+                    <h2>Contacts</h2>
+                    <ul class="">
+                        <li class="">GitHub:<a href="https://github.com/kingov-alexey"
+                                target="_blank">@kingov-alexey</a></li>
+                        <li class="">Telegram:<a href="https://web.telegram.org/kingov-alexey"
+                                target="_blank">@kingov_alexey</a>
+                        </li>
+                        <li class="">Email: <a href="mailto:kingov_alexey@mail.ru">kingov_alexey@mail.ru</a></li>
+                    </ul>
                 </div>
             </div>
             <!-- <div class="container">
@@ -59,16 +77,7 @@
                         applications. The selected range of tools will allow me to realize my goal.</p>
                 </div>
             </div>
-            <div class="container">
-                <div class="card-contacts">
-                    <h2>Contacts</h2>
-                    <ul class="">
-                        <li class="">gitHub</li>
-                        <li class="">teleg</li>
-                        <li class="">mail</li>
-                    </ul>
-                </div>
-            </div>
+            
             <div class="container">
                 <div class="card-skills">
                     <h2>skills</h2>
@@ -92,6 +101,19 @@
             </div>
         </footer>
     </div>
+
+    <div class="preloader">
+        <div class="spinner"></div>
+
+    </div>
+
+    <script>
+        window.addEventListener('load', () => {
+            /* Страница загружена, включая все ресурсы */
+            const preloader = document.querySelector('.preloader') /* находим блок Preloader */
+            preloader.classList.add('preloader_hidden') /* добавляем ему класс для скрытия */
+        })
+    </script>
 
 </body>
 
