--- a/index.html
+++ b/index.html
@@ -18,41 +18,47 @@
     <div class="wrap">
 
         <header class="header">
-            <div class="header-content">
-                <div>Korolyov Alexey</div>
-                <div>developer</div>
-            </div>
+            <h1>Korolyov Alexey</h1>
+            <nav class="nav">
+                <input type="checkbox" id="hmt" class="hidden-menu-ticker">
+                <label class="btn-menu" for="hmt">
+                    <span class="first"></span>
+                    <span class="second"></span>
+                    <span class="third"></span>
+                </label>
+                <ul class="hidden-menu">
+                    <div class="blur">
+                        <li class="menu-item"><a href="#profile" class="nav-link">Profile</a></li>
+                        <li class="menu-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                        <li class="menu-item"><a href="#summary" class="nav-link">Summary</a></li>
+                        <li class="menu-item"><a href="#skills" class="nav-link">Skills</a></li>
+                        <li class="menu-item"><a href="#code" class="nav-link">Code</a></li>
+                        <li class="menu-item"><a href="#courses" class="nav-link">Courses</a></li>
+                        <li class="menu-item"><a href="#Projects" class="nav-link">Projects</a></li>
+                        <li class="menu-item"><a href="#education" class="nav-link">Education</a></li>
+                        <li class="menu-item"><a href="#languages" class="nav-link">languages</a></li>
+                    </div>
+                </ul>
+            </nav>
         </header>
 
 
-        <nav>
-            <input type="checkbox" id="hmt" class="hidden-menu-ticker">
-            <label class="btn-menu" for="hmt">
-                <span class="first"></span>
-                <span class="second"></span>
-                <span class="third"></span>
-            </label>
-            <ul class="hidden-menu">
-                <li class="menu-item"><a href="#profile" class="nav-link">Profile</a></li>
-                <li class="menu-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li class="menu-item"><a href="#summary" class="nav-link">Summary</a></li>
-                <li class="menu-item"><a href="#skills" class="nav-link">Skills</a></li>
-                <li class="menu-item"><a href="#code" class="nav-link">Code</a></li>
-                <li class="menu-item"><a href="#courses" class="nav-link">Courses</a></li>
-                <li class="menu-item"><a href="#Projects" class="nav-link">Projects</a></li>
-                <li class="menu-item"><a href="#education" class="nav-link">Education</a></li>
-                <li class="menu-item"><a href="#languages" class="nav-link">languages</a></li>
-            </ul>
-        </nav>
 
         <main class="main">
 
             <section class="section" id="profile">
-                <h1>Korolyov Alexey</h1>
-                <div class="avatar">
-                    <img src="./assets/img/avatar.jpg" alt="avatar">
+                <div class="test">
+
+
+                    <div class="avatar">
+                        <img src="./assets/img/avatar.jpg" alt="avatar">
+                    </div>
+
+                    <div class="profession">
+                        developer
+                    </div>
                 </div>
-                <div>developer</div>
+
             </section>
 
             <!-- <section class="section" id="contacts">
@@ -75,8 +81,8 @@
                 <p>My goal is to learn how to write applications for mobile phones as well as modern web
                     applications. The selected range of tools will allow me to realize my goal.</p>
             </section> -->
-
-            <!-- <section class="section" id="skills">
+            <!-- 
+            <section class="section" id="skills">
                 <h2>skills</h2>
                 <ul class="">
                     <li>HTML</li>
