--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/spinner.css">
-
-
+    <link rel="stylesheet" href="./css/slider.css">
     <link rel="icon" href="./assets/img/favicon.ico">
+
     <link rel="preload" href="./assets/fonts/ZenDots-Regular.ttf" as="font">
     <title>Alexey Korolyov</title>
 
@@ -30,112 +30,235 @@
                     <span class="third"></span>
                 </label>
                 <ul class="hidden-menu">
-                    <li class="menu-item"><a href="#profile" class="nav-link">Profile</a></li>
-                    <li class="menu-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                    <li class="menu-item"><a href="#summary" class="nav-link">Summary</a></li>
-                    <li class="menu-item"><a href="#skills" class="nav-link">Skills</a></li>
-                    <li class="menu-item"><a href="#code" class="nav-link">Code</a></li>
-                    <li class="menu-item"><a href="#courses" class="nav-link">Courses</a></li>
-                    <li class="menu-item"><a href="#Projects" class="nav-link">Projects</a></li>
-                    <li class="menu-item"><a href="#education" class="nav-link">Education</a></li>
-                    <li class="menu-item"><a href="#languages" class="nav-link">languages</a></li>
+                    <li class="menu-item">
+                        <a href="#profile" class="nav-link" onclick="test('profile')">Profile</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#contacts" class="nav-link" onclick="test('contacts')">Contacts</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#summary" class="nav-link" onclick="test('summary')">Summary</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#skills" class="nav-link" onclick="test('skills')">Skills</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#code" class="nav-link" onclick="test('code')">Code</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#courses" class="nav-link" onclick="test('courses')">Courses</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#projects" class="nav-link" onclick="test('projects')">Projects</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#education" class="nav-link" onclick="test('education')">Education</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#languages" class="nav-link" onclick="test('languages')">languages</a>
+                    </li>
                 </ul>
             </nav>
         </header>
 
         <main class="main">
 
-            <section class="section" id="profile">
-                <div>
-                    <div class="avatar">
-                        <img src="./assets/img/avatar.jpg" alt="avatar">
+            <div class="slider">
+
+                <section class="section" id="profile">
+                    <div>
+                        <div class="avatar">
+                            <img src="./assets/img/avatar.jpg" alt="avatar">
+                        </div>
+
+                        <div class="profession">
+                            developer
+                        </div>
                     </div>
+                </section>
 
-                    <div class="profession">
-                        developer
+                <section class="section" id="contacts">
+                    <h2>Contacts</h2>
+                    <ul class="">
+                        <li class="">GitHub:
+                            <a href="https://github.com/kingov-alexey" target="_blank">@kingov-alexey</a>
+                        </li>
+                        <li class="">Telegram:
+                            <a href="https://web.telegram.org/kingov-alexey" target="_blank">@kingov_alexey</a>
+                        </li>
+                        <li class="">Email:
+                            <a href="mailto:kingov_alexey@mail.ru">kingov_alexey@mail.ru</a>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="section" id="summary">
+                    <h2>Summary</h2>
+                    <p>My goal is to learn how to write applications for mobile phones as well as modern web
+                        applications. The selected range of tools will allow me to realize my goal.</p>
+                </section>
+
+
+                <section class="section" id="skills">
+                    <h2>skills</h2>
+                    <ul class="">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>React</li>
+                        <li>ReactNative</li>
+                        <li>Nodejs</li>
+                        <li>Git</li>
+                        <li>VSC</li>
+                    </ul>
+                </section>
+
+                <section class="section" id="code">
+                    <h2>Code</h2>
+                    <pre>
+                        <code>
+const userRequest = 'Are you reading this code?';
+let testReadTextCode = (arg) => {
+    let userResponse = confirm(arg);
+    return alert(userResponse ? 'you are attentive' : 'you are not careful');
+    }
+testReadTextCode(userRequest);
+                        </code> 
+                    </pre>
+                </section>
+
+                <section class="section" id="courses">
+                    <h2>courses</h2>
+                    <p>
+                        this should be table with my courses
+                    </p>
+                </section>
+
+                <section class="section" id="projects">
+                    <h2>projects</h2>
+                    <p>
+                        this should be table with my projects
+                    </p>
+                </section>
+
+                <section class="section" id="education">
+                    <h2>education</h2>
+                    <p>
+                        this should be table with my education
+                    </p>
+                </section>
+
+                <section class="section" id="languages">
+                    <h2>languages</h2>
+                    <p>
+                        this should be table with my languages append native russian
+                    </p>
+                </section>
+
+
+            </div>
+
+
+
+
+
+            <!-- <div class="slider">
+
+                <section class="section" id="profile">
+                    <div>
+                        <div class="avatar">
+                            <img src="./assets/img/avatar.jpg" alt="avatar">
+                        </div>
+
+                        <div class="profession">
+                            developer
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <!-- <section class="section" id="contacts">
-                <h2>Contacts</h2>
-                <ul class="">
-                    <li class="">GitHub:
-                        <a href="https://github.com/kingov-alexey" target="_blank">@kingov-alexey</a>
-                    </li>
-                    <li class="">Telegram:
-                        <a href="https://web.telegram.org/kingov-alexey" target="_blank">@kingov_alexey</a>
-                    </li>
-                    <li class="">Email:
-                        <a href="mailto:kingov_alexey@mail.ru">kingov_alexey@mail.ru</a>
-                    </li>
-                </ul>
-            </section> -->
+                <section class="section" id="contacts">
+                    <h2>Contacts</h2>
+                    <ul class="">
+                        <li class="">GitHub:
+                            <a href="https://github.com/kingov-alexey" target="_blank">@kingov-alexey</a>
+                        </li>
+                        <li class="">Telegram:
+                            <a href="https://web.telegram.org/kingov-alexey" target="_blank">@kingov_alexey</a>
+                        </li>
+                        <li class="">Email:
+                            <a href="mailto:kingov_alexey@mail.ru">kingov_alexey@mail.ru</a>
+                        </li>
+                    </ul>
+                </section>
 
-            <!-- <section class="section" id="summary">
-                <h2>Summary</h2>
-                <p>My goal is to learn how to write applications for mobile phones as well as modern web
-                    applications. The selected range of tools will allow me to realize my goal.</p>
-            </section> -->
+                <section class="section" id="summary">
+                    <h2>Summary</h2>
+                    <p>My goal is to learn how to write applications for mobile phones as well as modern web
+                        applications. The selected range of tools will allow me to realize my goal.</p>
+                </section>
 
-            <!-- 
-            <section class="section" id="skills">
-                <h2>skills</h2>
-                <ul class="">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JS</li>
-                    <li>React</li>
-                    <li>ReactNative</li>
-                    <li>Nodejs</li>
-                    <li>Git</li>
-                    <li>VSC</li>
-                </ul>
-            </section> -->
 
-            <!-- <section class="section" id="code">
-                <h2>Code</h2>
-                <pre>
-                    <code>
-                        const userRequest = 'Are you reading this code?';
-                        let testReadTextCode = (arg) => {
-                            let userResponse = confirm(arg);
-                            return alert(userResponse ? 'you are attentive' : 'you are not careful');
-                        }
-                        testReadTextCode(userRequest);
-                    </code> 
-                </pre>
-            </section> -->
+                <section class="section" id="skills">
+                    <h2>skills</h2>
+                    <ul class="">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>React</li>
+                        <li>ReactNative</li>
+                        <li>Nodejs</li>
+                        <li>Git</li>
+                        <li>VSC</li>
+                    </ul>
+                </section>
 
-            <!-- <section class="section" id="courses">
-                <h2>courses</h2>
-                <p>
-                    this should be table with my courses
-                </p>
-            </section> -->
+                <section class="section" id="code">
+                    <h2>Code</h2>
+                    <pre>
+                        <code>
+                            const userRequest = 'Are you reading this code?';
+                            let testReadTextCode = (arg) => {
+                                let userResponse = confirm(arg);
+                                return alert(userResponse ? 'you are attentive' : 'you are not careful');
+                            }
+                            testReadTextCode(userRequest);
+                        </code> 
+                    </pre>
+                </section>
 
-            <!-- <section class="section" id="projects">
-                <h2>projects</h2>
-                <p>
-                    this should be table with my projects
-                </p>
-            </section> -->
+                <section class="section" id="courses">
+                    <h2>courses</h2>
+                    <p>
+                        this should be table with my courses
+                    </p>
+                </section>
 
-            <!-- <section class="section" id="education">
-                <h2>education</h2>
-                <p>
-                    this should be table with my education
-                </p>
-            </section> -->
+                <section class="section" id="projects">
+                    <h2>projects</h2>
+                    <p>
+                        this should be table with my projects
+                    </p>
+                </section>
 
-            <!-- <section class="section" id="languages">
-                <h2>languages</h2>
-                <p>
-                    this should be table with my languages append native russian
-                </p>
-            </section> -->
+                <section class="section" id="education">
+                    <h2>education</h2>
+                    <p>
+                        this should be table with my education
+                    </p>
+                </section>
+
+                <section class="section" id="languages">
+                    <h2>languages</h2>
+                    <p>
+                        this should be table with my languages append native russian
+                    </p>
+                </section>
+
+
+            </div> -->
+
+
         </main>
-
 
         <footer class="footer">
             <div class="container">
@@ -155,14 +278,11 @@
 
     </div>
 
-
-
-
     <div class="preloader">
         <div class="spinner"></div>
-
     </div>
 
+    <script src="./js/slider.js"></script>
 
     <script>
         window.addEventListener('load', () => {
@@ -171,10 +291,18 @@
         })
     </script>
 
+
+    <script>
+        // contacts
+        // summary 
+        // skills 
+        // code 
+        // courses
+        // projects
+        // education
+        // languages 
+    </script>
+
 </body>
-
-
-
-
 
 </html>
