--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <pre>
                         <code>
 const userRequest = 'Are you reading this code?';
-let testReadTextCode = (arg) => {
+let testReadTextCode = (arg) =&gt; {
     let userResponse = confirm(arg);
     return userResponse;
     }
